# Antirot

./: .gitignore  AGENTS.md  COMMERCIAL-LICENSE.md  CONTRIBUTING.md  Done.md  LICENSE-DUAL.md  README.md  env.example.txt  eslint.config.js  future_ideas.md  openclaw.plugin.json  package-lock.json  package.json  product_spec.md  readme_agent.md  setup_VPS.md  test.txt  tsconfig.json  vulnerabilities.txt  weekly_review.md
DESIGN-IS-2026-07-10/: 00-scope.md  01-evidence.md  02-scorecard.md  03-verdict.md  04-handoff-prompt.md
PATHFINDER-2026-07-13/: 00-features.md  02-duplication-report.md  03-unified-proposal.md  04-handoff-prompts.md
apps/backend/: Cargo.toml  README.md
apps/backend/deploy/: antirot-backend.service
apps/backend/sql/: 001_init.sql  002_production_hardening.sql  003_security_limits.sql  004_identity_security.sql  005_delivery_backoff.sql
apps/backend/src/: alarm.rs  apns.rs  auth.rs  config.rs  db.rs  error.rs  llm.rs  main.rs  memory.rs  models.rs  pairing_cli.rs  prompt.rs  rate_limit.rs  routes.rs  secrets.rs
apps/backend/tests/fixtures/prompts/: backend.txt
apps/bridge/: Cargo.toml  README.md
apps/bridge/deploy/: antirot-bridge.service
apps/bridge/sql/: 001_init.sql
apps/bridge/src/: apns.rs  auth.rs  config.rs  db.rs  error.rs  llm.rs  main.rs  memory.rs  models.rs  prompt.rs  routes.rs
apps/bridge/tests/fixtures/prompts/: openclaw.txt  standalone.txt
docs/: backend-userflow-test-cases.md  backend-vps-new-user.md  ios-coach-room-ui-prd.md  openclaw-architecture-premortem.md
scripts/: backend-userflow-test-lib.mjs  check-env.mjs  check-testflight-upload.mjs  llm-judge-rubric.mjs  restart-backend-vps.sh  run-antirot-scenario.mjs  run-frontend-lab.mjs  test-action-button-maps.mjs  test-alarm-reconciliation-contracts.mjs  test-backend-integrations.mjs  test-backend-userflows-llm.mjs  test-backend-userflows-no-llm.mjs  test-ci-security-contracts.mjs  test-device-auth-boundaries.mjs  test-frontend-secret-boundaries.mjs  test-llm-judge-quality.mjs  test-llm-judge-rubric.mjs  test-memory-timezone-contracts.mjs  test-misc-task-capture-llm.mjs  test-production-contracts.mjs  test-real-agent-chat.mjs  test-recent-alarm-flow.mjs  test-scenarios-live.ts  (+4 more)
(+128 files in other folders)
